@@ -1,3 +1,6 @@
+2013-01-09 Graeme Gott <graeme@gottcode.org>
+	* Refactor wordlist out of pattern.
+
 2013-01-06 Graeme Gott <graeme@gottcode.org>
 	* Use Wiktionary for definitions.
 
